# zephyr-ia

./: CMakeLists.txt  Kconfig.intel  README.md  west.yml
docs/releases/: index.rst  release-notes-4.3.rst
docs/releases/misc/ehl/: can.rst  common.rst  dma.rst  gbe.rst  (+9 more)
overlay/: ehl_crb.overlay
samples/intel/can/: README.rst  prj.conf  prj_single.conf  sample.yaml
samples/intel/dma/: CMakeLists.txt  prj.conf  sample.yaml
samples/intel/emmc/: README.rst  prj.conf  sample.yaml
samples/intel/gpio/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/intel/pwm/: README.rst  prj.conf  sample.yaml
samples/intel/socket_can/: README.rst  prj.conf
samples/intel/tgpio/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/intel/uart/: README.rst  prj.conf  sample.yaml
scripts/: reference_app_build.sh
services/: CMakeLists.txt  Kconfig
services/fw_version/: fw_version.c
services/sys_services/: CMakeLists.txt  Kconfig  resource_table.c  sys_service.c
services/sys_services/host_services/: CMakeLists.txt  Kconfig  host_ipc_service.c  host_service_common.h  sys_mng.c
services/sys_services/host_services/heci/: CMakeLists.txt  Kconfig  heci.c  heci_internal.h  smhi_client.c  smhi_client.h
services/sys_services/host_services/include/: ipc_helper.h
services/sys_services/include/: heci.h  heci.rst  host_ipc_service.h  ipc.rst  sys_service.h
services/user_app_framework/: CMakeLists.txt  Kconfig  non_user_mode_framework.c
services/user_app_framework/include/user_app_framework/: uapp_config.h  uapp_framework.h  uapp_utils.h
zephyr/: module.yml
(+17 files in other folders)
